# Rendering

./: CMakeLists.txt  LICENSE  README.md  RayTracing.sln  RayTracing.vcxproj  default.nix  v1.scene
include/: geometry.h  light.h  lights.h  main.h  mesh.h  objects.h  options.h  renderer.h  scene.h  stats.h  tests.h  timer.h  util.h
input/: acceleraion_structure.scene  area_light.scene  backface_culling.scene  basic_shader.scene  full_scene.scene  phong.scene  reflective_refractive.scene  shotgun.scene  simple_shapes.scene  smooth_shading.scene
scenes/: v1.scene
src/: lights.cpp  main.cpp  mesh.cpp  objects.cpp  renderer.cpp  scene.cpp  util.cpp
